fix: sonar issues fixed and Admin Password logic changes